--- a/README.adoc
+++ b/README.adoc
@@ -20,15 +20,13 @@ Almost no application now don't have a user profile so we picked it as our first
 . KISS
 . YAGNI
 . Aggregation
-
+[TIP]
 A "uses" B = Aggregation : B exists independently (conceptually) from A
-
 . Composition
-
+[TIP]
 A "owns" B = Composition : B has no meaning or purpose in the system without A
-
 . Package By Feature
-
+[TIP]
 Package-by-feature uses packages to reflect the feature set. It places all items related to a single feature (and only that feature) into a single directory/package. This results in packages with high cohesion and high modularity, and with minimal coupling between packages. Items that work closely together are placed next to each other.
 
 == Steps
@@ -39,7 +37,8 @@ Package-by-feature uses packages to reflect the feature set. It places all items
   <?xml version="1.0" encoding="UTF-8"?>
   <project xmlns="http://maven.apache.org/POM/4.0.0"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+           xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+           http://maven.apache.org/xsd/maven-4.0.0.xsd">
       <modelVersion>4.0.0</modelVersion>
       <groupId>com.learn</groupId>
       <artifactId>prepare-your-self</artifactId>
@@ -48,7 +47,7 @@ Package-by-feature uses packages to reflect the feature set. It places all items
 
 . Created the needed folder for our project link:src/main/java/com/learn[] and link:src/test/java/com/learn[]
 
-. Implemented the empty class diagram image::src/main/resources/pic/ProfileClassDiagram.png[]
+. Implemented the empty class diagram image:src/main/resources/pic/ProfileClassDiagram.png[]
 
 . Added the Junit dependency to the maven pom file.
 
