--- a/README.adoc
+++ b/README.adoc
@@ -17,6 +17,16 @@ Almost no application now don't have a user profile so we picked it as our first
 
 . TDD
 . SOLID
+[TIP]
+Single Responsibility Principal states that every class should have responsibility over a single part of the functionality provided by the software, and that responsibility should be entirely encapsulated by the class. All its services should be narrowly aligned with that responsibility.
+[TIP]
+Open/Closed Principal states "software entities (classes, modules, functions, etc.) should be open for extension, but closed for modification"; such an entity can allow its behavior to be extended without modifying its existing functionality/source code.
+[TIP]
+Liskov Substitution Principal in a computer program, if S is a subtype of T, then objects of type T may be replaced with objects of type S (i.e., objects of type S may substitute objects of type T).
+[TIP]
+Interface Segregation Principal states that no client should be forced to depend on methods it does not use.
+[TIP]
+Dependency Inversion High-level modules should not depend on low-level modules. Both should depend on abstractions. Abstractions should not depend on details. Details should depend on abstractions.
 . KISS
 [TIP]
 Keep It Stupid Simple
