Updated our documentation with the latest changes.

--- a/README.adoc
+++ b/README.adoc
@@ -97,6 +97,117 @@ Package-by-feature uses packages to reflect the feature set. It places all items
         <version>18.0</version>
     </dependency>
 
+. Added JBehave dependency to the maven pom file.
+[source,xml]
+    <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-spring</artifactId>
+            <version>${jbehave.core-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>${jbehave.core-version}</version>
+            <classifier>resources</classifier>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jbehave.site</groupId>
+            <artifactId>jbehave-site-resources</artifactId>
+            <version>${jbehave.site-version}</version>
+            <type>zip</type>
+        </dependency>
+
+. Added JBehave maven plugin to run the stories.
+[source,xml]
+        <plugin>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-maven-plugin</artifactId>
+            <version>${jbehave.core-version}</version>
+            <executions>
+                <execution>
+                    <id>unpack-view-resources</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>unpack-view-resources</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>embeddable-stories</id>
+                    <phase>integration-test</phase>
+                    <configuration>
+                        <includes>
+                            <include>**/*Stories.java</include>
+                        </includes>
+                        <excludes/>
+                        <ignoreFailureInStories>true</ignoreFailureInStories>
+                        <ignoreFailureInView>false</ignoreFailureInView>
+                        <threads>1</threads>
+                        <metaFilters>
+                            <metaFilter/>
+                        </metaFilters>
+                    </configuration>
+                    <goals>
+                        <goal>run-stories-as-embeddables</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+. Added maven compiler plugin to the plugin managment to force the java version.
+[source,xml]
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.2</version>
+            <configuration>
+                <source>${java-version}</source>
+                <target>${java-version}</target>
+            </configuration>
+        </plugin>
+
+. Added maven resource plugin to filter resources and execlude the java classes.
+[source,xml]
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
+. Started writing unit tests for the low level services, the method naming takes BDD style GIVEN, WHEN, THEN and any other services outside the tested services should be mocked.
+[source,java]
+  public class DefaultUserServiceCreateUserTest {
+      ...
+      @BeforeClass
+      public static void setUp() {
+          UserRepository userRepository = mock(UserRepository.class);
+          userService = new DefaultUserService();
+          ((DefaultUserService) userService).setUserRepository(userRepository);
+          doReturn(buildValidUser()).
+                  when(userRepository.save(buildValidUserEntity()));
+      }
+      ...
+      @Test
+      public void givenValidUserObjectWhenCreateUserThenUserIsStored() {
+          User user = userService.createUser(
+                  UserBusinessObject.newBuilder()
+                          .userFirstName(validUserFirstName)
+                          .userEmail(validUserEmail)
+                          .build()
+          );
+          assertThat(user, equalTo(buildValidUser()));
+      }
+      ...
+  }
+
 == References
 
 * http://www.javapractices.com/topic/TopicAction.do?Id=205[]
