--- a/README.adoc
+++ b/README.adoc
@@ -21,6 +21,8 @@ Almost no application now don't have a user profile so we picked it as our first
 == Principals
 
 . TDD
+[TIP]
+Test-driven development is a software development process that relies on the repetition of a very short development cycle: first the developer writes an (initially failing) automated test case that defines a desired improvement or new function, then produces the minimum amount of code to pass that test, and finally refactors the new code to acceptable standards.
 . SOLID
 [TIP]
 Single Responsibility Principal states that every class should have responsibility over a single part of the functionality provided by the software, and that responsibility should be entirely encapsulated by the class. All its services should be narrowly aligned with that responsibility.
@@ -204,6 +206,34 @@ Package-by-feature uses packages to reflect the feature set. It places all items
                           .build()
           );
           assertThat(user, equalTo(buildValidUser()));
+      }
+      ...
+  }
+
+. Started writing behaviour tests for high level services (also called management or application services), we are here testing the high level features.
+[source, java]
+  public class DefaultProfileManagementUpdateProfile {
+      ...
+      @Given("valid user and no media for profile update")
+      public void givenValidUserAndNoMediaForProfileUpdate() {
+          testProfile = Profile.newBuilder()
+                  .user(
+                          UserBusinessObject.newBuilder()
+                                  .userId(validUserId)
+                                  .userFirstName(validUserFirstName)
+                                  .userEmail(validUserEmail)
+                                  .build()
+                  ).build();
+      }
+
+      @When("update profile with valid user and no media")
+      public void whenUpdateProfileWithValidUserAndNoMedia() {
+          profileManagement.updateProfile(testProfile);
+      }
+
+      @Then("profile with valid user and no media updated")
+      public void thenProfileWithValidUserAndNoMediaUpdated() {
+          assertThat(buildValidProfileWithoutMedia(), equalTo(testProfile));
       }
       ...
   }
